Fixed to top lead info & nav w/ collapse

--- a/callveyor/app/styles/main.scss
+++ b/callveyor/app/styles/main.scss
@@ -101,6 +101,18 @@ body {
             border: none;
         }
     }
+    .row {
+        max-height: 250px;
+        overflow-y: scroll;
+        dd {
+            font-weight: bold;
+        }
+        dt {
+            font-weight: normal;
+        }
+    }
+}
+
 .fluid-wrap {
     padding: 0 15px;
 }
